third_party/rust/chromium_crates_io/vendor/cxx-1.0.117/tests/ui/nonlocal_rust_type.stderr
error[E0117]: only traits defined in the current crate can be implemented for types defined outside of the crate
  --> tests/ui/nonlocal_rust_type.rs:10:9
   |
10 |         type OptBuilder<'a>;
   |         ^^^^^--------------
   |         |    |
   |         |    `Option` is not defined in the current crate
   |         impl doesn't use only types from inside the current crate
   |
   = note: define and implement a trait or new type instead

error[E0117]: only traits defined in the current crate can be implemented for types defined outside of the crate
  --> tests/ui/nonlocal_rust_type.rs:14:13
   |
14 |         rs: Box<OptBuilder<'a>>,
   |             ^^^^--------------
   |             |   |
   |             |   `Option` is not defined in the current crate
   |             impl doesn't use only types from inside the current crate
   |
   = note: define and implement a trait or new type instead
